# flazky-bird

./: .env.example  .gitignore  Cargo.toml  README.md  foundry.toml  index.html
cache/: solidity-files-cache.json
contracts/: FlazkyBird.sol  FlazkyBird.t.sol  flazkybird.sol  flazkybirs.t.sol  flazkybirs_test.sol
contracts/mocks/: SP1VerifierMock.sol
docs/: Cargo.toml  index.html
docs/src/: main.rs
elf/: flazky-bird
game/: Cargo.toml  index.html
game/src/: main.rs
logic/: Cargo.toml
logic/src/: lib.rs
prover/client/: Cargo.toml
prover/client/src/: main.rs
prover/host/: Cargo.toml  build.rs
prover/host/src/: main.rs
script/: deployFlazky.s.sol
