[package]
name = "rusty-bird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_asset = "0.14.2"
rand = "0.8.5"
flazky-bird-lib = { path = "../logic" }
serde = "1.0.200"
bincode = "1.3.3"
hex = "0.4.3"
wasm-bindgen = "0.2"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"