[package]
name = "prover-client"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = {version = "2.0.0"}
flazky-bird-lib = { path = "../../logic" }
bincode = "1.3.3"
alloy-primitives = {version = "0.8", features = ["serde"]}
alloy-sol-types = { version = "0.8" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = ["keccak"] }
