[package]
name = "prover-host"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
sp1-sdk = "2.0.0"
alloy-primitives = {version = "0.8", features = ["serde"]}
eyre = "0.6"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
flazky-bird-lib = { path = "../../logic" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
alloy = { version = "0.3" }
dotenv = "0.15.0"
serde_json = "1.0.94"
alloy-sol-types = { version = "0.8" }

[build-dependencies]
sp1-build = "2.0.0"